--- a/about.html
+++ b/about.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Splitmate</title>
+    <title>About</title>
 </head>
-<body>
+<body>git 
     
 </body>
 </html>
