--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
 </head>
-<body>git 
-    
+<body> 
+    <h1>About Page</h1>
 </body>
 </html>
